--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Maksim Zinchuk",
+  "name": "boilerplate_frontend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
